--- a/invoice.ipynb
+++ b/invoice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +574,14 @@
       "Num Features: 6\n",
       "Selected Features: [ True False  True  True  True  True  True]\n",
       "Feature Ranking: [1 2 1 1 1 1 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/linear_model/base.py:509: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  linalg.lstsq(X, y)\n"
      ]
     }
    ],
@@ -588,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +607,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +661,7 @@
        "34.820875531175275"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +699,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest R squared\": 0.7762\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using random forest\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.datasets import make_regression\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "forest_reg.fit(X_train, Y_train)\n",
+    "print('Random Forest R squared\": %.4f' % forest_reg.score(X_validation, Y_validation))\n",
+    "#print(regr.predict(X_validation[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest RMSE: 5.8170\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = forest_reg.predict(X_validation)\n",
+    "forest_mse = mean_squared_error(y_pred, Y_validation)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "print('Random Forest RMSE: %.4f' % forest_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Boosting R squared\": 0.7882\n",
+      "Gradient Boosting RMSE: 5.6586\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradient boosting\n",
+    "from sklearn import ensemble\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "model = ensemble.GradientBoostingRegressor()\n",
+    "model.fit(X_train, Y_train)\n",
+    "print('Gradient Boosting R squared\": %.4f' % model.score(X_validation, Y_validation))\n",
+    "y_pred = model.predict(X_validation)\n",
+    "model_mse = mean_squared_error(y_pred, Y_validation)\n",
+    "model_rmse = np.sqrt(model_mse)\n",
+    "print('Gradient Boosting RMSE: %.4f' % model_rmse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -722,62 +802,62 @@
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>13.0</td>\n",
-       "      <td>21.26</td>\n",
-       "      <td>-8.263095</td>\n",
+       "      <td>21.94</td>\n",
+       "      <td>-8.937916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>28.0</td>\n",
-       "      <td>33.90</td>\n",
-       "      <td>-5.900714</td>\n",
+       "      <td>33.95</td>\n",
+       "      <td>-5.953512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>24.0</td>\n",
-       "      <td>23.17</td>\n",
-       "      <td>0.833925</td>\n",
+       "      <td>23.59</td>\n",
+       "      <td>0.413180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>22.0</td>\n",
-       "      <td>15.08</td>\n",
-       "      <td>6.918070</td>\n",
+       "      <td>20.74</td>\n",
+       "      <td>1.258330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>23.0</td>\n",
-       "      <td>21.84</td>\n",
-       "      <td>1.163022</td>\n",
+       "      <td>21.38</td>\n",
+       "      <td>1.621820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>27.0</td>\n",
-       "      <td>25.12</td>\n",
-       "      <td>1.877010</td>\n",
+       "      <td>25.97</td>\n",
+       "      <td>1.030480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>22.0</td>\n",
-       "      <td>23.08</td>\n",
-       "      <td>-1.075567</td>\n",
+       "      <td>18.74</td>\n",
+       "      <td>3.260836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>16.0</td>\n",
-       "      <td>17.35</td>\n",
-       "      <td>-1.349928</td>\n",
+       "      <td>20.73</td>\n",
+       "      <td>-4.730669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>18.0</td>\n",
-       "      <td>23.93</td>\n",
-       "      <td>-5.934268</td>\n",
+       "      <td>23.05</td>\n",
+       "      <td>-5.054093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>29.0</td>\n",
-       "      <td>36.40</td>\n",
-       "      <td>-7.396431</td>\n",
+       "      <td>37.61</td>\n",
+       "      <td>-8.608048</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -785,104 +865,34 @@
       ],
       "text/plain": [
        "    actual  predicted  residuals\n",
-       "30    13.0      21.26  -8.263095\n",
-       "31    28.0      33.90  -5.900714\n",
-       "32    24.0      23.17   0.833925\n",
-       "33    22.0      15.08   6.918070\n",
-       "34    23.0      21.84   1.163022\n",
-       "35    27.0      25.12   1.877010\n",
-       "36    22.0      23.08  -1.075567\n",
-       "37    16.0      17.35  -1.349928\n",
-       "38    18.0      23.93  -5.934268\n",
-       "39    29.0      36.40  -7.396431"
+       "30    13.0      21.94  -8.937916\n",
+       "31    28.0      33.95  -5.953512\n",
+       "32    24.0      23.59   0.413180\n",
+       "33    22.0      20.74   1.258330\n",
+       "34    23.0      21.38   1.621820\n",
+       "35    27.0      25.97   1.030480\n",
+       "36    22.0      18.74   3.260836\n",
+       "37    16.0      20.73  -4.730669\n",
+       "38    18.0      23.05  -5.054093\n",
+       "39    29.0      37.61  -8.608048"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_pred_df = pd.DataFrame( { 'actual': Y_validation,\n",
-    "                            'predicted': np.round( y_predict, 2),\n",
-    "                            'residuals': Y_validation - y_predict } )\n",
+    "                            'predicted': np.round( y_pred, 2),\n",
+    "                            'residuals': Y_validation - y_pred } )\n",
     "#test_pred_df[test_pred_df['residuals']<5]\n",
     "test_pred_df[30:40]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest R squared\": 0.7762\n"
-     ]
-    }
-   ],
-   "source": [
-    "# using random forest\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.datasets import make_regression\n",
-    "forest_reg = RandomForestRegressor(random_state=42)\n",
-    "forest_reg.fit(X_train, Y_train)\n",
-    "print('Random Forest R squared\": %.4f' % forest_reg.score(X_validation, Y_validation))\n",
-    "#print(regr.predict(X_validation[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest RMSE: 5.8170\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = forest_reg.predict(X_validation)\n",
-    "forest_mse = mean_squared_error(y_pred, Y_validation)\n",
-    "forest_rmse = np.sqrt(forest_mse)\n",
-    "print('Random Forest RMSE: %.4f' % forest_rmse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gradient Boosting R squared\": 0.7882\n",
-      "Gradient Boosting RMSE: 5.6597\n"
-     ]
-    }
-   ],
-   "source": [
-    "# gradient boosting\n",
-    "from sklearn import ensemble\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "model = ensemble.GradientBoostingRegressor()\n",
-    "model.fit(X_train, Y_train)\n",
-    "print('Gradient Boosting R squared\": %.4f' % model.score(X_validation, Y_validation))\n",
-    "y_pred = model.predict(X_validation)\n",
-    "model_mse = mean_squared_error(y_pred, Y_validation)\n",
-    "model_rmse = np.sqrt(model_mse)\n",
-    "print('Gradient Boosting RMSE: %.4f' % model_rmse)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,21 +904,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.733856489312197\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = pickle.load(open(filename, 'rb'))\n",
     "result = loaded_model.score(X_test, Y_test)\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
